--- a/static/css/style.css
+++ b/static/css/style.css
@@ -500,3 +500,10 @@ button:hover {
         justify-content: flex-end;
     }
 }
+.notification-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+}
+
